fixed left align bug on mobile screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -144,8 +144,13 @@ p {
         transform: rotate(0);
     }
 
-    #title {
+    #title .container-fluid {
         text-align: center;
+    }
+
+    #press img {
+        width: 20%;
+        margin: 40px 20px;
     }
 
 }
